05-kong-ingress-external-service/external-service.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy-to-ubuntu
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: ubuntu.com
