05-kong-ingress-external-service/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: proxy-from-k8s-to-ubuntu
spec:
 parentRefs:
 - name: kong
 hostnames:
 - "ubuntu-from-k8s.kong"
 rules:
 - matches:
   - path:
       type: 
       value: /
   backendRefs:
   - name: proxy-to-ubuntu
     kind: Service
     port: 80
